@@ -1,6 +1,6 @@
 Package: polycor
 Title: Polychoric and Polyserial Correlations
-Date: 2013/12/25
+Date: 2013/12/29
 Version: 0.7-9
 Depends: R (>= 1.9.0), mvtnorm, sfsmisc
 Author: John Fox
